# 2EmArraySomamX

./: CMakeLists.txt  binarysearch.c  binarysearch.cpp  binarysearch.h  buscacomhash.c  buscacomhash.cpp  buscacomhash.h  doissomamx.cpp  doissomamx.h  geraraleatorio.py  hash.cpp  hash.h  heapsort.c  heapsort.cpp  heapsort.h  indiceinvertidohash.cpp  indiceinvertidohash.h  interpolationsearch.c  interpolationsearch.cpp  interpolationsearch.h  listaencadeada.cpp  listaencadeada.h  main.cpp  mergesort.cpp  mergesort.h  quicksort.c  quicksort.cpp  quicksort.h
Docs/: documentacao.tex
